# Bimify

./: .gitattributes  .gitignore  GITHUB_SETUP.md  README.md  ROBOFLOW_TO_IFC_PIPELINE.txt  _ifc_export_test.py  _ifc_test.py  docker-compose.yml  example ifc.ifc  example json.txt  pyproject.toml  start-dev.ps1  stop-dev.ps1  temp_ifc_check.py
.github/workflows/: ci.yml
XbimInspector/: Program.cs
config/: default.yaml  ifc_standards.py
core/: __init__.py  exceptions.py  logging_config.py  settings.py
core/geometry/: contract.py
core/ifc/: __init__.py  build_ifc43_model.py  build_ifc43_model_v2.py  (+13 more)
data/: settings.json
docker/: api.Dockerfile  worker.Dockerfile
docs/: geometry-preprocess.md  hottcad-check.md  ifc-export-v2-pipeline-uebersicht.md  ifc-export-v2.md  ifc_pipeline_architecture.md  repair-level1.md  rollback-notes.md  workflow-audit-report.md  workflow-technical-analysis.md
examples/: model 1 json.txt  model 2 json.txt  model 3 json.txt
ifc_generator_v2/: __init__.py  models.py
services/: __init__.py
tests/: test_complete_ifc_generation.py  test_exceptions.py  test_geometry_processor.py  test_health.py  test_hottcad.py  test_hottcad_api.py  test_ifc_v2_export_complete.py  test_ifc_v2_runner.py  test_merge_pipeline.py  test_postprocess_v2.py  test_repair_preview_api.py  test_roboflow_confidence.py  test_roboflow_models.py  test_snap_repair.py  test_wall_processing.py  test_window_conversion.py  utils_ifc.py
tools/: publish-xbim.ps1
ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+257 files in other folders)
