[tool.poetry]
name = "bimify"
version = "0.1.0"
description = "Roboflow-driven 2D plan to IFC 4.3 conversion services"
authors = ["Bimify Team <dev@bimify.local>"]
readme = "README.md"
packages = [
    { include = "core" },
    { include = "services" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.115.0"
uvicorn = { version = "^0.30.0", extras = ["standard"] }
pydantic-settings = "^2.4.0"
celery = "^5.4.0"
redis = "^5.0.0"
boto3 = "^1.34.0"
botocore = "^1.34.0"
aioboto3 = "^12.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
loguru = "^0.7.2"
shapely = "^2.0.4"
numpy = "^1.26.0"
opencv-python = "^4.10.0"
orjson = "^3.10.7"
ifcopenshell = "^0.7.0"
networkx = "^3.2.0"
pydantic = "^2.7.0"
pypdfium2 = "^5.0.0"
python-dotenv = "^1.0.0"
inference-sdk = "^0.13.0"
reportlab = "^4.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = { version = "^0.27.0", extras = ["cli"] }
ruff = "^0.5.0"
black = "^24.8.0"
mypy = "^1.10.0"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

